force-app/main/default/objects/FundingBatchProperty__c/FundingBatchProperty__c.object-meta.xml
<CustomObject>
    <description>Specifies the number of houses for a given tenure and fuel type combination relating to the batch</description>
    <label>Batch Property</label>
    <nameField>
        <displayFormat>BPN-{00000}</displayFormat>
        <label>Batch Property Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>