force-app/main/default/objects/FundingBatchProperty__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <referenceTo>FundingBatch__c</referenceTo>
    <relationshipLabel>Batch Properties</relationshipLabel>
    <relationshipName>Batch_Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>