force-app/main/default/objects/FundingBatchProperty__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas (on grid)</fullName>
            </value>
            <value>
                <fullName>Electric (off grid)</fullName>
            </value>
            <value>
                <fullName>Fossil fuel (off grid)</fullName>
            </value>
            <value>
                <fullName>Park home-electric (off grid)</fullName>
            </value>
            <value>
                <fullName>Park home-fossil fuel (off grid)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>