force-app/main/default/objects/FundingBatchProperty__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <label>Tenure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner occupied</fullName>
            </value>
            <value>
                <fullName>Private rented sector (fully funded)</fullName>
            </value>
            <value>
                <fullName>Private rented sector (50% funded)</fullName>
            </value>
            <value>
                <fullName>Social housing (50% funded)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>